# Mip

./: CMakeLists.txt  Readme.txt  bt_server.py  main.cpp
inc/: Arduino_wrapper.h  Encoder.h  foc_utils.h  joystick_commands.h  lowpass_filter.h  pid.h  rc_compatibility.h  rc_gpio.h  rc_spi.h
src/: Encoder.cpp  Sensor.cpp  foc_utils.cpp  lowpass_filter.cpp  pid.cpp  rc_compatibility.cpp  rc_gpio.cpp  rc_spi.cpp
